--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,16 +161,18 @@
 }
 
 .get-btn {
-    border: 1px solid #FFFFFF;
+    border: 1px solid #1E71FF;
     border-radius: 60px;
     padding: 14px 40px;
-    background: #FFFFFF;
+    background: #e8f1ff;
 }
-.simple_line{
+
+.simple_line {
     width: 167px;
     height: 0;
     margin-bottom: 10px;
-    border: 1px solid rgba(43, 53, 62, 0.15);;
+    border: 1px solid rgba(43, 53, 62, 0.15);
+    ;
 }
 
 .z-index-1 {
@@ -209,7 +211,8 @@
 .pt_35 {
     padding-top: 35px;
 }
-.pb_35{
+
+.pb_35 {
     padding-bottom: 35px;
 }
 
